RESOLVED FIXED240004
LibWebRTCCodecs does no longer need a pixel conformer
https://bugs.webkit.org/show_bug.cgi?id=240004
Summary LibWebRTCCodecs does no longer need a pixel conformer
youenn fablet
Reported 2022-05-03 04:53:30 PDT
LibWebRTCCodecs does no longer need a pixel conformer
Attachments
Patch (7.51 KB, patch)
2022-05-03 04:56 PDT, youenn fablet
no flags
youenn fablet
Comment 1 2022-05-03 04:56:46 PDT
EWS
Comment 2 2022-05-04 03:13:43 PDT
Committed r293769 (250248@main): <https://commits.webkit.org/250248@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 458733 [details].
Radar WebKit Bug Importer
Comment 3 2022-05-04 03:14:13 PDT
Note You need to log in before you can comment on or make changes to this bug.