LibWebRTCCodecs does no longer need a pixel conformer https://bugs.webkit.org/show_bug.cgi?id=240004

Reviewed by Eric Carlson.

Removing no longer used code.
No change of behavior.
Unified build fix.

* SourcesCocoa.txt:
* WebKit.xcodeproj/project.pbxproj:
* WebProcess/GPU/webrtc/LibWebRTCCodecs.h:
* WebProcess/GPU/webrtc/LibWebRTCCodecs.mm: Removed.
* WebProcess/InjectedBundle/API/Cocoa/WKWebProcessPlugInNodeHandle.mm:

Canonical link: https://commits.webkit.org/250248@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@293769 268f45cc-cd09-0410-ab3c-d52691b4dbfc